# stockway

./: .env.example  .env.production.example  .gitignore  API_DOCUMENTATION.md  GEMINI.md  README.md  flow.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_load_test.sh  scratch_seed.py  start_celery_worker.sh  start_web.sh  test_urls.py
accounts/: API.md  admin.py  apps.py  models.py  serializers.py  test_email_otp.py  tests.py  urls.py  views.py
analytics/: API.md  admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/: __init__.py  celery.py  settings.py  urls.py
configs/: config.py  permissions.py  supabase_auth.py  supabase_storage.py  supabase_views.py  urls.py
core/: audit.py  authentication.py  config.py  exceptions.py  middleware.py  order_state.py  permissions.py  services.py  storage.py  tests.py  tests_security.py  throttling.py  validators.py
delivery/: models.py  tests.py
inventory/: API.md  models.py  serializers.py  tests.py  urls.py  views.py
load_tests/: README.md  config.py  locustfile.py  locustfile_staged.py
notifications/: API.md  admin.py  deno.d.ts  deno.json  manage_notifications.sh  models.py  serializers.py  supabase_edge_function.ts  tasks.py  tests.py  tsconfig.json  urls.py  utils.py  views.py
orders/: API.md  models.py  serializers.py  shopkeeper_urls.py  tests.py  urls.py  views.py  warehouse_urls.py
payments/: API.md  admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
riders/: API.md  admin.py  models.py  serializers.py  services.py  tests.py  urls.py  (+1 more)
(+88 files in other folders)
